# PixelRAG

./: README.md  pyproject.toml
.github/workflows/: uptime-site.yml
deploy/: pixelrag-agent.service
embed/src/pixelrag_embed/: chunk.py  embed_cpu.py
eval/: README.md  REPRODUCE.md  pyproject.toml  reproduce.sh  run_livevqa.py
eval/lib/: grader.py  retrieval.py
history/: agent.yml  api-health.yml  tile-serving.yml  website.yml
index/src/pixelrag_index/: pipelines.py
render/: pyproject.toml
render/src/pixelrag_render/: chrome.py  render.py
render/src/pixelrag_render/backends/: cdp.py  fast_cdp.py
serve/src/pixelrag_serve/: api.py  render_ondemand.py
train/: CLAUDE.md  README.md  export_natural_filtered_v2.py  filter_query_naturalness.py  prepare_hf_dataset_single_jsonl.py  train_contrastors.py
train/docs/: natural_filtered_v2.md  reproduce_v8r.md  synthetic_data_pipeline.md
train/recipes/: v8s_ablation.sh
train/sft/: eval_baseline.py
web/: agent-server.mjs
web/app/: globals.css
web/app/api/chat/: route.ts
web/app/chat/: page.tsx
web/app/docs/: page.tsx
web/components/: AboutSection.tsx  NavLinks.tsx
