[project]
name = "pixelrag-repro"
version = "0.1.0"
description = "Self-contained reproduction harness for PixelRAG paper Table 1 — runs retrieval + reader + grader against live serves and prints the score."
requires-python = ">=3.12,<3.13"
# Deps for the API-path harness (run_bench.py + lib/): retrieval and reader run as
# remote HTTP serves, so no local torch/vllm is needed here.
dependencies = [
    "aiohttp==3.13.5",
    "datasets==4.8.5",
    "openai==2.38.0",
    "tqdm==4.67.3",
    "pillow==12.2.0",
    "requests==2.34.2",
    "numpy==2.4.6",
    "selenium==4.44.0",
    "webdriver-manager==4.1.1",
    "beautifulsoup4==4.14.3",
    "lxml==6.1.1",
    "tiktoken==0.13.0",
    "trafilatura==2.0.0",
    "litellm==1.86.2",
    "botocore==1.43.18",
    "tenacity==9.1.4",
    "fastmcp==3.3.1",
    "omegaconf==2.3.0",
    "retry==0.9.2",
]

[tool.uv]
package = false
